--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "my-app",
   "version": "1.0.8",
+  "homepage": "https://greatvivek11.github.io",
   "private": true,
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh pages -d build",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -11,6 +14,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "gh-pages": "^6.1.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-icons": "^1.3.0",
