--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v3.0.1
       with:
-        path: /dist
+        path: dist
     - name: Deploy GitHub Pages site
       uses: actions/deploy-pages@v4.0.5
